tests/gen-derivation/inputvalidation/unexpected-gen-target/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of genOfConcreteGen. Error during reflection: Target type's argument must be a variable name

ValidateInput:16:38--16:39
 12 |   MkY : Y Int String
 13 | 
 14 | --- Gen of strange things ---
 15 | 
 16 | genOfConcreteGen : Fuel -> Gen $ Gen X
                                           ^

Error: While processing right hand side of genOfLazies. Error during reflection: Target type is not a simple name

ValidateInput:19:29--19:35
 15 | 
 16 | genOfConcreteGen : Fuel -> Gen $ Gen X
 17 | genOfConcreteGen = deriveGen
 18 | 
 19 | genOfLazies : Fuel -> Gen $ Lazy X
                                  ^^^^^^

Error: While processing right hand side of genOfInfs. Error during reflection: Target type is not a simple name

ValidateInput:22:27--22:32
 18 | 
 19 | genOfLazies : Fuel -> Gen $ Lazy X
 20 | genOfLazies = deriveGen
 21 | 
 22 | genOfInfs : Fuel -> Gen $ Inf X
                                ^^^^^

Error: While processing right hand side of genOfDPair. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:25:25--25:27
 21 | 
 22 | genOfInfs : Fuel -> Gen $ Inf X
 23 | genOfInfs = deriveGen
 24 | 
 25 | genOfDPair : Fuel -> (a ** b ** Gen $ Y a b)
                              ^^

Error: While processing right hand side of genOfPair. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:28:39--28:51
 24 | 
 25 | genOfDPair : Fuel -> (a ** b ** Gen $ Y a b)
 26 | genOfDPair = deriveGen
 27 | 
 28 | genOfPair : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen (Y a b))
                                            ^^^^^^^^^^^^

Error: While processing right hand side of genOfPair'. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:31:40--31:52
 27 | 
 28 | genOfPair : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen (Y a b))
 29 | genOfPair = deriveGen
 30 | 
 31 | genOfPair' : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen X)
                                             ^^^^^^^^^^^^

Error: While processing right hand side of genOfFuns_pur. Error during reflection: Target type is not a simple name

ValidateInput:34:32--34:33
 30 | 
 31 | genOfPair' : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen X)
 32 | genOfPair' = deriveGen
 33 | 
 34 | genOfFuns_pur : Fuel -> Gen $ (a : Type) -> (b : Type) -> Y a b
                                     ^

Error: While processing right hand side of genOfFuns_pur0s. Error during reflection: Target type is not a simple name

ValidateInput:37:36--37:37
 33 | 
 34 | genOfFuns_pur : Fuel -> Gen $ (a : Type) -> (b : Type) -> Y a b
 35 | genOfFuns_pur = deriveGen
 36 | 
 37 | genOfFuns_pur0s : Fuel -> Gen $ (0 a : Type) -> (0 b : Type) -> Y a b
                                         ^

Error: While processing right hand side of genOfFuns_pur1s. Error during reflection: Target type is not a simple name

ValidateInput:40:36--40:37
 36 | 
 37 | genOfFuns_pur0s : Fuel -> Gen $ (0 a : Type) -> (0 b : Type) -> Y a b
 38 | genOfFuns_pur0s = deriveGen
 39 | 
 40 | genOfFuns_pur1s : Fuel -> Gen $ (1 a : Type) -> (1 b : Type) -> Y a b
                                         ^

Error: While processing right hand side of genOfFuns_ins_pair. Error during reflection: Target type is not a simple name

ValidateInput:43:42--43:43
 39 | 
 40 | genOfFuns_pur1s : Fuel -> Gen $ (1 a : Type) -> (1 b : Type) -> Y a b
 41 | genOfFuns_pur1s = deriveGen
 42 | 
 43 | genOfFuns_ins_pair : Fuel -> Gen (a ** ((b : Type) -> Y a b))
                                               ^

Error: While processing right hand side of genOfFuns_ins_pair0. Error during reflection: Target type is not a simple name

ValidateInput:46:45--46:46
 42 | 
 43 | genOfFuns_ins_pair : Fuel -> Gen (a ** ((b : Type) -> Y a b))
 44 | genOfFuns_ins_pair = deriveGen
 45 | 
 46 | genOfFuns_ins_pair0 : Fuel -> Gen (a ** ((0 b : Type) -> Y a b))
                                                  ^

Error: While processing right hand side of genOfFuns_ins_pair1. Error during reflection: Target type is not a simple name

ValidateInput:49:45--49:46
 45 | 
 46 | genOfFuns_ins_pair0 : Fuel -> Gen (a ** ((0 b : Type) -> Y a b))
 47 | genOfFuns_ins_pair0 = deriveGen
 48 | 
 49 | genOfFuns_ins_pair1 : Fuel -> Gen (a ** ((1 b : Type) -> Y a b))
                                                  ^

Error: While processing right hand side of genOfFuns_out_pair. Error during reflection: Target type is not a simple name

ValidateInput:52:37--52:38
 48 | 
 49 | genOfFuns_ins_pair1 : Fuel -> Gen (a ** ((1 b : Type) -> Y a b))
 50 | genOfFuns_ins_pair1 = deriveGen
 51 | 
 52 | genOfFuns_out_pair : Fuel -> Gen $ (b : Type) -> (a ** Y a b)
                                          ^

Error: While processing right hand side of genOfFuns_out_pair0. Error during reflection: Target type is not a simple name

ValidateInput:55:40--55:41
 51 | 
 52 | genOfFuns_out_pair : Fuel -> Gen $ (b : Type) -> (a ** Y a b)
 53 | genOfFuns_out_pair = deriveGen
 54 | 
 55 | genOfFuns_out_pair0 : Fuel -> Gen $ (0 b : Type) -> (a ** Y a b)
                                             ^

Error: While processing right hand side of genOfFuns_out_pair1. Error during reflection: Target type is not a simple name

ValidateInput:58:40--58:41
 54 | 
 55 | genOfFuns_out_pair0 : Fuel -> Gen $ (0 b : Type) -> (a ** Y a b)
 56 | genOfFuns_out_pair0 = deriveGen
 57 | 
 58 | genOfFuns_out_pair1 : Fuel -> Gen $ (1 b : Type) -> (a ** Y a b)
                                             ^

